flaggan inte i topp längre!

--- a/01_flag-of-japan/index.html
+++ b/01_flag-of-japan/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section class="flag">
-      <main class="square">
+    <main class="flag">
+      <section class="square">
         <aside class="circle"></aside>
-      </main>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
